--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -62,12 +62,14 @@
                             </h4>
                             <h5><%= offer.start_date.strftime('%d/%m/%Y') %>
                               <b> | </b> <%= offer.end_date.strftime('%d/%m/%Y') %></h5>
+                            <div class="offer-btns-div">
+                            <%= button_to 'Eliminar Oferta', offer_path(offer),
+                                              :confirm => 'Está seguro?', :method => :delete %>
+
+                              <%= button_to 'Ver Detalles', offer_path(offer), :method => :put%></td>
+                            </div>
                           </div>
                           <!--end media-body-->
-                          <td><%= button_to 'Eliminar Oferta', offer_path(offer),
-                                            :confirm => 'Está seguro?', :method => :delete %>
-
-                            <%= button_to 'Ver Detalles', offer_path(offer), :method => :put%></td>
 
                         </div>
                         <!--end media-->
