Password update working

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,10 +13,12 @@
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
                 </fieldset>
 
+                <%= devise_error_messages! %>
+
                 <label for="inputPass">Contraseña Actual: </label>
-                <%= f.password_field :password, :autocomplete => "off", :class => "input-xlarge", :required => true %>
+                <%= f.password_field :current_password, :autocomplete => "off", :class => "input-xlarge", :required => true %>
                 <label for="inputNewPass">Nueva Contraseña: </label>
-                <%= f.password_field :new_password, :class => "input-xlarge", :required => true %>
+                <%= f.password_field :password, :class => "input-xlarge", :required => true %>
                 <label for="inputNewPassAgain">Repetir Contraseña: </label>
                 <%= f.password_field :password_confirmation, :class => "input-xlarge", :required => true %>
                 <hr>
