--- a/app/views/newsletter_mailer/newsletter_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_email.html.erb
@@ -28,216 +28,307 @@
   <style>
       a,
       a:hover {
-          text-decoration:none !important;
+          text-decoration: none !important;
       }
 
-      h1, h2, h3, h4 ,h5 {
-          margin:0px !important;
+      h1, h2, h3, h4, h5 {
+          margin: 0px !important;
       }
+
       p {
           font-size: 14px;
-          line-height:20px;
-          color:#333;
+          line-height: 20px;
+          color: #333;
       }
 
+      li {
+          list-style: none;
+      }
 
+      .middleTd {
+          background: url(http://cursosflipstudios.com.ar/imgdeal/bgTexture.png);
+          /*aca vendria la imagen de la textura posta, hay que subirla al servidor*/
 
+      }
+
+      .rounded-borders {
+          border-radius: 25px 25px 25px 25px;
+      }
+
+      .light-shadowed {
+          -webkit-box-shadow: 9px 9px 13px -4px rgb(99, 98, 98);
+          -moz-box-shadow: 9px 9px 13px -4px rgb(99, 98, 98);
+          box-shadow: 9px 9px 13px -4px rgb(99, 98, 98);
+      }
+
+      body {
+          font-family: Arial, Helvetica, sans-serif;
+          margin: 0;
+          padding: 0;
+          background-color: white;
+      }
+
+      .whitebg {
+          background: white;
+      }
+
+      .firstTd {
+          background: #F5F5F5;
+          color: #696969;
+          border: 1px solid #C4C4C4;
+      }
+
+      .firstP {
+          letter-spacing: -0.6px;
+          color: #66cdaa;
+          font-weight: bold;
+          font-size: 17px;
+          margin: 0 !important;
+      }
+
+      .firstTable {
+          background: rgb(23, 46, 117);
+          color: #fff;
+          border-radius: 5px;
+      }
+
+      .firstA {
+          color: white;
+          font-size: 12px;
+          text-decoration: none;
+          text-align: center;
+      }
+
+      .secondTD {
+          font-size: 14px;
+          line-height: 20px;
+          color: #333;
+      }
+
+      .firstH2 {
+          color: mediumAquaMarine;
+          padding: 10px 0;
+      }
+
+      .secondA {
+          background-color: rgb(23, 46, 117);
+          color: #fff;
+          text-decoration: none;
+          font-size: 20px;
+          padding: 10px;
+          margin: 10px;
+          border-radius: 5px;
+      }
+          .no-padding{
+              margin:0 !important;
+          }
   </style>
 </head>
-<body style="font-family: Arial, Helvetica, sans-serif; margin: 0; padding: 0; background-color:#cbebfa;" marginheight="0" topmargin="0" marginwidth="0" leftmargin="0" >
+<body style="" marginheight="0" topmargin="0" marginwidth="0" leftmargin="0">
 <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#cbebfa">
-  <tr>
-    <td>
-      <!--header-->
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://cursosflipstudios.com.ar/imgdeal/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com"></td>
-        </tr>
-        <tr>
-          <td valign="middle" align="center" style="background:#c1beb6; color:#fff;" bgcolor="#ff4b3d">
-            <table width="600" border="0" cellspacing="0" cellpadding="0">
-              <tr>
-                <td height="58" width="480"><p style="letter-spacing:-0.6px; color:#fff;font-size: 17px;">Participá en estas y más ofertas de tu interés</p></td>
-                <td width="120">
-                  <table width="120" border="0" cellspacing="0" cellpadding="10" style="background:#899fac; color:#fff;" bgcolor="#5d717d">
-                    <tr>
-                      <td align="center" width="120"><a href="http://localhost:3000" style="color:#fff; font-size:12px; text-decoration:none; text-align:center;">VER OFERTAS</a></td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-      <!-- end header-->
-    </td>
-  </tr>
-  <tr>
-    <td valign="middle" align="top">
-      <!--body-->
-      <!--divider-->
-      <table width="600" height="40" border="0" align="center" cellpadding="0" cellspacing="0">
-        <tr>
-          <td height="40"></td>
-        </tr>
-      </table>
-      <!--end divider-->
+<tr>
+  <td>
+    <!--header-->
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr class="light-shadowed">
+        <td valign="middle" align="center" height="100" class="whitebg" style="" bgcolor="#fff">
+          <img src="http://cursosflipstudios.com.ar/imgdeal/logo-landing.png" alt="dealhunter, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.dealhunter.com">
+        </td>
+      </tr>
+      <tr>
+        <td valign="middle" align="center" class="firstTd" bgcolor="#ff4b3d">
+          <table width="600" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+              <td height="58" width="480">
+                <p class="firstP" style="">Participá en estas y más ofertas de tu
+                  interés</p></td>
+              <td width="120">
+                <table width="120" border="0" cellspacing="0" cellpadding="10" class="firstTable" style="">
+                  <tr>
+                    <td align="center" width="120">
+                      <a href="http://localhost:3000" class=" rounded-borders-btn firstA" style="">VER OFERTAS</a></td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+    <!-- end header-->
+  </td>
+</tr>
+<tr>
+  <td class="middleTd" valign="middle" align="top">
+    <!--body-->
+    <!--divider-->
+    <table width="600" height="40" border="0" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+        <td height="40"></td>
+      </tr>
+    </table>
+    <!--end divider-->
 
-      <!--content one-->
-      <table width="750" border="0" align="center" cellpadding="0" cellspacing="0" style="background:#fff;" bgcolor="#fff">
-        <tr>
-          <td width="330" valign="top">
-            <table width="100%" border="0" cellspacing="0" cellpadding="20">
-              <tr>
-                <td style="font-size: 14px; line-height:20px; color:#333;">
+    <!--content one-->
+    <table class="rounded-borders light-shadowed whitebg" width="750" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#fff">
+      <tr>
+        <td width="330" valign="top">
+          <table width="100%" border="0" cellspacing="0" cellpadding="20">
+            <tr>
+              <td style="" class="secondTD">
 
-                  <% i =0 %>
-                  <% @offers.each do |offer| %>
+                <% i =0 %>
+                <% @offers.each do |offer| %>
 
-                      <% if i%3 == 0 %>
-
-                          <div class="row">
-
-                      <%end%>
-
-                      <div class="span3 offer-small">
-                        <!-- 	/* solapa --------------------------- */-->
-                        <ul class="flap-items">
-                          <li class="img_item">
-                            <% unless offer.photo.nil? %>
-                                <img class="small-photo " src="<%= offer.photo %>" alt=""
-                                     style="height: 195px;" />
-                            <%end%>
-                          </li>
-                        </ul>
+                    <% if i%3 == 0 %>
 
                         <div class="row">
-                          <div class="span3" style="position:relative;">
-                            <div class="wrapper-padding">
-                              <ul class="inline hotel-item clearfix">
-                                <li>
-                                  <h3 class="media-heading"> <a href="<%= offer_path(offer) %>"> <%=offer.name%> </a></h3>
-                                  <% unless offer.branch.nil? %>
-                                      <h5> <%=offer.branch.company.name%> - <%=offer.branch.name%> </h5>
-                                  <%end%>
-                                  <hr style="margin-top: 5px; margin-bottom: 5px;
-">
-                                  <h7><p style="color: grey">Precio: $<%= offer.prizes.first.discounted_price unless offer.prizes.first.nil? %> </p>
-                                      <p style="color: grey">Descuento: <%= "-" + offer.prizes.first.discount_percentage.to_i.to_s + "%" unless offer.prizes.first.nil?%> </p>
-                                  </h7>
 
-                                </li>
-                                <li>
-                                  <ul>
-                                    <li class="offer-disccount"> </li>
-                                    <li class="offer-price"></li>
-                                  </ul>
-                                </li>
-                              </ul>
-                            </div><!--end wrapper-padding-->
-                          </div><!--end span3-->
-                        </div><!--end row-->
-                      </div><!--end span3-->
+                    <% end %>
 
+                    <div class="span3 offer-small">
+                      <!-- 	/* solapa --------------------------- */-->
+                      <ul class="flap-items">
+                        <li class="img_item">
+                          <% unless offer.photo.nil? %>
+                              <img class="small-photo " src="<%= offer.photo %>" alt=""
+                                   style="height: 195px;"/>
+                          <% end %>
+                        </li>
+                      </ul>
 
+                      <div class="row">
+                        <div class="span3" style="position:relative;">
+                          <div class="wrapper-padding">
+                            <ul class="inline hotel-item clearfix">
+                              <li>
+                                <h3 class="media-heading"><a href="<%= offer_path(offer) %>"> <%= offer.name %> </a>
+                                </h3>
+                                <% unless offer.branch.nil? %>
+                                    <h5> <%= offer.branch.company.name %> - <%= offer.branch.name %> </h5>
+                                <% end %>
+                                <hr style="margin-top: 5px; margin-bottom: 5px;
+                                ">
+                                <h7><p style="color: grey">Precio:
+                                  $<%= offer.prizes.first.discounted_price unless offer.prizes.first.nil? %> </p>
 
-                      <% i += 1 %>
-                      <% if i%3 == 0 %>
+                                  <p style="color: grey">Descuento: <%= "-" + offer.prizes.first.discount_percentage.to_i.to_s + "%" unless offer.prizes.first.nil? %> </p>
+                                </h7>
 
+                              </li>
+                              <li>
+                                <ul>
+                                  <li class="offer-disccount"></li>
+                                  <li class="offer-price"></li>
+                                </ul>
+                              </li>
+                            </ul>
                           </div>
+                          <!--end wrapper-padding-->
+                        </div>
+                        <!--end span3-->
+                      </div>
+                      <!--end row-->
+                    </div>
+                    <!--end span3-->
 
-                      <%end%>
-
-                  <% end %>
 
 
-                </td>
-              </tr>
-            </table>
-          </td>
+                    <% i += 1 %>
+                    <% if i%3 == 0 %>
 
-        </tr>
-        <tr>
-          <td valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
-        </tr>
+                        </div>
 
-        <tr>
-          <td valign="middle" align="center"><h2 style="color: mediumAquaMarine; padding:10px 0;">Encontrá las mejores ofertas<br> para vos</h2></td>
-        </tr>
-      </table>
-      <!--end content one-->
+                    <% end %>
+                <% end %>
 
-      <!-- content two-->
-      <table width="750" border="0" align="center" cellpadding="0" cellspacing="0" style="background:#FFF;" bgcolor="#fff">
 
-        <tr>
-          <td align="center">
-            <table width="750" border="0" cellspacing="0" style="padding:10px 30px 20px 30px;">
-              <tr>
-                <td align="center">
-                  <table width="220" height="60" border="0" cellspacing="0" cellpadding="10" style="background: mediumAquaMarine; color:#ffffff;" bgcolor="#ff4b3d">
-                    <tr>
-                      <td align="center"><a href="http://localhost:3000" style="color:#fff; text-decoration:none; font-size:20px; font-weight:bold;">VER OFERTAS</a></td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-      <!--end content two-->
+              </td>
+            </tr>
+          </table>
+        </td>
 
-      <!--divider-->
-      <table width="600" height="40" border="0" align="center" cellpadding="0" cellspacing="0">
-        <tr>
-          <td height="40"></td>
-        </tr>
-      </table>
-      <!--end divider-->
+      </tr>
+      <tr>
+        <td valign="middle" align="center" height="21">
+          <img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21">
+        </td>
+      </tr>
 
-      <!--end body-->
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <!--footer-->
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <td valign="middle" align="center" style="background:#fff;" height="110" bgcolor="#fff">
-            <!--pre-footer-->
-            <table width="600" height="110" border="0" cellspacing="0" cellpadding="0">
-              <tr>
-                <td width="512">
-                  <p style="margin:5px 0; color:#3253FF;">Atención al Cliente</p>
-                  <h3 style="font-weight:normal; margin:0px;">0800-345-DEAL(3325)</h3>
-                  <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@dealhunter.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a></p>
-                </td>
-                <td width="88">
-                  <table width="88" border="0" cellspacing="0" cellpadding="0" height="34">
-                    <tr>
-                      <td width="32"><a href="http://www.facebook.com/dealhunterArgentina"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-fb.jpg" width="32" height="24" alt="Facebook"></a></td>
-                      <td width="32"><a href="http://www.twitter.com/dealhunterArg"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-twitter.jpg" width="32" height="24" alt="Twitter"></a></td>
-                      <td width="24"><a href="https://www.google.com"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-gPlus.jpg" width="24" height="24" alt="google"></a></td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
-            <!--end pre-footer-->
-          </td>
-        </tr>
-        <tr>
-          <td valign="middle" align="center" style="background:#fcfcfc;" height="70" bgcolor="#fcfcfc">
-            <!--post-footer-->
-            <!--end post-footer-->
-          </td>
-        </tr>
-      </table>
-      <!--end footer-->
-    </td>
-  </tr>
+      <tr>
+        <td valign="middle" align="center">
+          <h2 style="" class="firstH2">Encontrá las mejores ofertas<br> para vos</h2></td>
+
+      </tr>
+      <tr style="height:70px;">
+        <td align="center">
+          <a href="http://localhost:3000" class="secondA" style="
+          ">VER
+            OFERTAS</a></td>
+      </tr>
+
+    </table>
+    <!--end content one-->
+
+    <!--divider-->
+    <table width="600" height="40" border="0" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+        <td height="40"></td>
+      </tr>
+    </table>
+    <!--end divider-->
+
+    <!--end body-->
+  </td>
+</tr>
+<tr>
+  <td>
+    <!--footer-->
+    <table width="100%" style="border-top: solid mediumaquamarine 2px;" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td valign="middle" align="center" style="background:#fff;" height="110" bgcolor="#fff">
+          <!--pre-footer-->
+          <table width="600" height="110" border="0" cellspacing="0" cellpadding="0" style="padding: 20px;">
+            <tr>
+              <td width="512">
+                <p class="no-padding">Atención al Cliente</p>
+
+                <h3 style="font-weight:bold; margin:0px;">0800-345-DEAL(3325)</h3>
+
+                <p style="margin:0px; font-size: 12px; line-height:20px;">
+                  <a href="mailto:info@dealhunter.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a>
+                </p>
+              </td>
+              <td width="88">
+                <table width="88" border="0" cellspacing="0" cellpadding="0" height="34">
+                  <tr>
+                    <td width="32">
+                      <a href="http://www.facebook.com/dealhunterArgentina"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-fb.jpg" width="32" height="24" alt="Facebook"></a>
+                    </td>
+                    <td width="32">
+                      <a href="http://www.twitter.com/dealhunterArg"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-twitter.jpg" width="32" height="24" alt="Twitter"></a>
+                    </td>
+                    <td width="24">
+                      <a href="https://www.google.com"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/icon-gPlus.jpg" width="24" height="24" alt="google"></a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <!--end pre-footer-->
+        </td>
+      </tr>
+      <tr>
+        <td valign="middle" align="center" style="background:#fcfcfc;" height="70" bgcolor="#fcfcfc">
+          <!--post-footer-->
+          <!--end post-footer-->
+        </td>
+      </tr>
+    </table>
+    <!--end footer-->
+  </td>
+</tr>
 </table>
 </body>
 </html>
