adds ponderation at index of clients

--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -67,7 +67,7 @@
                       "zoom" => 13,
                       "center_latitude" => @latitude,
                       "center_longitude" => @longitude,
-                      "auto_adjust" => false,
+                      "auto_adjust" => true,
               }, "markers" => { "data" => @json }) %>
 
             </div>
