Add statistic links in every menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,7 @@
                       <%else%>
                         <li><a href="<%= users_titles_user_path %>">Mis Intereses</a></li>
                       <%end%>
+                      <li><a href="<%= users_statistics_path %>">Mis Estadísticas</a></li>
                       <li><a href="#">Ayuda</a></li>
                       <li class="divider"></li>
                       <li><%= link_to "Salir", destroy_user_session_path, :method => :delete %></li>
