--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -99,6 +99,7 @@
         <h2>Información Personal</h2>
         <ul class="aside-nav">
           <li><a href="<%= edit_user_path(current_user)%>" class="active">Mi Perfil</a></li>
+          <li><a href="<%= users_statistics_path %>">Mis Estadísticas</a></li>
         </ul>
         <h2>Preferencias</h2>
         <ul class="aside-nav">
