--- a/app/views/users/change_newsletter_frequency.html.erb
+++ b/app/views/users/change_newsletter_frequency.html.erb
@@ -78,6 +78,7 @@
         <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
           <li><a href="<%= edit_user_path(current_user)%>" >Mi Perfil</a></li>
+          <li><a href="<%= users_statistics_path %>">Mis Estadísticas</a></li>
         </ul>
         <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
