Statistic body structure

--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -13,6 +13,15 @@
         <div class="wrapper">
           <article>
 
+           <% if @user.company?%>
+               <!-- aca van las estadísiticas de la empresa-->
+
+           <%else%>
+
+                <!-- aca van las estadísiticas del cliente-->
+
+           <%end%>
+
 
 
           </article>
